Datos problema su mobile device, sprendimas su moment.js

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 #container .form-control {
     width: 90%;
+    height: 38px;
     border:1px solid white;
     border-radius: 0;
     background-clip:border-box;
@@ -139,6 +140,9 @@ span{
         width: 100%;
         flex-flow: row nowrap;
     }
+    #container .form-control {
+        width: 100%;
+    }
     #container .navbar-brand {
         width: 30%;        
     }
@@ -146,7 +150,7 @@ span{
         display: none;
     }
     #oruList .table td, #oruList .table th {
-        padding: .1rem .2rem;
+        padding: .2rem .2rem;
     }
     #oruList {
         padding: 0;
@@ -156,8 +160,8 @@ span{
         text-align: center;
     }
     .dydis {
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
     }
     #days .nav-link.active .condition {
         display: none;
